--- a/src/styles/components/TaroDates/taro-dates.scss
+++ b/src/styles/components/TaroDates/taro-dates.scss
@@ -105,6 +105,7 @@ $color-brand: #00c777;
       }
       &-holiday {
         top: 0;
+        overflow: hidden;
         // color: #333333;
       }
 
@@ -145,7 +146,6 @@ $color-brand: #00c777;
         }
       }
     }
-  
     &__cursor-default {
       cursor: default;
     }
