cal-day__hide 样式 Month key upgrade

--- a/src/styles/components/TaroDates/taro-dates.scss
+++ b/src/styles/components/TaroDates/taro-dates.scss
@@ -149,6 +149,9 @@ $color-brand: #00c777;
     &__cursor-default {
       cursor: default;
     }
+    &__hide {
+      color: #ffffff;
+    }
   
     &__default {
       // border: 1px solid #e4e7e7;
